force-app/main/default/objects/Faculty_Proposal_Breakdown__c.object
<CustomObject>
    <fields>
        <fullName>Breakdown__c</fullName>
        <label>% Breakdown</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <label>Faculty</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ERDA_Faculty</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <label>Proposal</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Proposal</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.RecordType.Name</field>
                <operation>equals</operation>
                <value>Bequest</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Faculty Proposal Breakdown</relationshipLabel>
        <relationshipName>Faculty_Proposal_Breakdown</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Faculty Proposal Breakdown</label>
    <nameField>
        <displayFormat>FP-{00000}</displayFormat>
        <label>Faculty Proposal Breakdown Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Faculty Proposal Breakdown</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>